--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -1,3 +1,11 @@
+/*
+  1. Posicionamiento
+  2. Modelo de caja (Box Model)
+  3. Tipografía
+  4. Visuales
+  5. Miscelaneos - otros.
+ */
+
 * {
   padding: 0;
   margin: 0;
