--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -145,7 +145,7 @@ main {
   color: var(--black);
 }
 
-.main-exchange-container p {
+.main-exchange-container .title {
   margin-bottom: 3rem;
   font-size: 1.4rem;
   font-weight: 500;
@@ -153,6 +153,40 @@ main {
   color: #757575;
 }
 
-.main-tables-container {
+.main-currency-table {
+  width: 70%;
+  min-width: 23.5rem;
+  height: 36rem;
+  margin: 0 auto;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+}
 
+.currency-table--title {
+  margin-bottom: 1.5rem;
+  font-size: 1.8rem;
+  font-weight: bold;
+  line-height: 2.3rem;
+  color: var(--bitcoin-orange);
+}
+
+.currency-table--container {
+  width: 90%;
+  min-width: 23rem;
+  max-width: 30rem;
+  margin: 0 auto;
+}
+
+.table1 {
+  width: 100%;
+  height: 100%;
+}
+
+.table1 td {
+  width: 50%;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.9rem;
+  color: var(--grey);
+  border-color: var(--just-white);
 }
