--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -156,9 +156,8 @@ main {
 .main-currency-table {
   width: 70%;
   min-width: 23.5rem;
-  height: 36rem;
+  height: 25rem;
   margin: 0 auto;
-  text-align: center;
   font-family: 'Inter', sans-serif;
 }
 
@@ -188,5 +187,67 @@ main {
   font-weight: 500;
   line-height: 1.9rem;
   color: var(--grey);
-  border-color: var(--just-white);
+  background-color: var(--just-white);
+  text-align: left;
+  padding-left: 2rem;
+}
+
+.currency-table--container .table__top-left {
+  border-radius: 1.5rem 0 0 0;
+}
+
+.currency-table--container .table__top-right {
+  border-radius: 0 1.5rem 0 0;
+}
+
+.currency-table--container .table__bottom-right {
+  border-radius: 0 0 1.5rem 0;
+}
+
+.currency-table--container .table__bottom-left {
+  border-radius: 0 0 0 1.5rem;
+}
+
+.currency-table--container .table__right {
+  font-size: 1.4rem;
+  font-weight: normal;
+  line-height: 1.7rem;
+  color: #757575;
+}
+
+.currency-table--container .down {
+  display: inline-block;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: 1rem;
+  background-image: url('../icons/trending-down.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.currency-table--container .up {
+  display: inline-block;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: 1rem;
+  background-image: url('../icons/trending-up.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.currency-table--date {
+  width: 19rem;
+  height: 3rem;
+  margin: 0 auto;
+  margin-top: 5rem;
+  padding: 0.8rem;
+  background-color: var(--soft-orange);
+  border-radius: 0.8rem;
+  color: var(--warm-black);
+  font-family: 'Inter', sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  font-weight: 300;
 }
