--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -288,3 +288,49 @@ main {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.main-product-detail  {
+  position: relative;
+  widows: 100%;
+  min-width: 320px;
+  height: auto;
+  padding: 20px 10px;
+  background-color: var(--warm-black);
+}
+
+.product-detail--batata-logo {
+  position: absolute;
+  top: -10px;
+  left: calc(50% - 20px);
+  width: 40px;
+  height: 25px;
+  background-image: url('../icons/batata.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.product-detail-title {
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.product-detail-title h2 {
+  margin-bottom: 20px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--just-white);
+}
+
+.product-detail-title p {
+  margin-bottom: 20px;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  font-weight: normal;
+  color: #808080;
+}
