--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -334,3 +334,57 @@ main {
   font-weight: normal;
   color: #808080;
 }
+
+.product-detail--card {
+  width: 100%;
+  min-width: 288px;
+  max-width: 400px;
+  height: 150px;
+  margin: 15px auto;
+  padding: 15px;
+  background-color: var(--black);
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+
+.icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 8px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.clock {
+  background-image: url('../icons/clock.svg');
+}
+
+.eye {
+  background-image: url('../icons/eye.svg');
+}
+
+.dollar {
+  background-image: url('../icons/dollar-sign.svg');
+}
+
+.check-circle {
+  background-image: url('../icons/check-circle.svg');
+}
+
+.product--card-title {
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  line-height: 2rem;
+  color: var(--just-white);
+}
+
+.product--card-body {
+  margin-bottom: 15px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.6rem;
+  color: #808080;
+}
