--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -339,7 +339,7 @@ main {
   width: 100%;
   min-width: 288px;
   max-width: 400px;
-  height: 150px;
+  min-height: 150px;
   margin: 15px auto;
   padding: 15px;
   background-color: var(--black);
@@ -388,3 +388,24 @@ main {
   line-height: 1.6rem;
   color: #808080;
 }
+
+.bitcoin-img-container {
+  width: 100%;
+  min-height: 300px;
+  height: 50vh;
+  margin-bottom: 8px;
+  background-image: url('../imgs/bitcoinbaby2x.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.bitcoin-img-container h2 {
+  padding-top: 60px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--just-white);
+}
+
