--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -440,3 +440,132 @@ main {
   line-height: 1.8rem;
   color: #757575;
 }
+
+.plans-container--card {
+  position: relative;
+  width: 70%;
+  min-width: 230px;
+  max-width: 300px;
+  height: 250px;
+  margin: 50px auto 0;
+  padding: 0 15px;
+  background-color: var(--just-white);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+
+.recommended {
+  position: absolute;
+  width: 120px;
+  height: 31px;
+  top: -15px;
+  left: calc(50% - 60px);
+  font-size: 1.2rem;
+  font-weight: bold;
+  line-height: 15px;
+  padding: 6px;
+  background-color: var(--bitcoin-orange);
+  border-radius: 8px;
+  color: var(--just-white);
+}
+
+.plan-card--title {
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: var(--black);
+}
+
+.plan-card--price {
+  position: relative;
+  padding: 5px 0;
+  font-size: 5.2rem;
+  font-weight: bold;
+  line-height: 6.3rem;
+  letter-spacing: -0.08rem;
+  color: var(--black);
+}
+
+.plan-card--price span {
+  position: absolute;
+  top: 15px;
+  left: 60px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  color: #363636;
+}
+
+.plan-card-saving {
+  font-family: 'Inter', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  color: #757575;
+  text-align: center;
+  padding-bottom: 1.6rem;
+}
+
+.plan-card--call-to-action {
+  width: 151px;
+  height: 48px;
+  padding: 12px 16px;
+  background-color: var(--off-white);
+  border: 2px solid var(--bitcoin-orange);
+  border-radius: 4px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  font-weight: bold;
+  color: var(--warm-black);
+}
+
+.plan-card--call-to-action span {
+  width: 20px;
+  height: 10px;
+  display: inline-block;
+  background-image: url('../icons/orange-right-arrow.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.monthly .recommended {
+  background-color: var(--secondary-blue);
+}
+
+.monthly .plan-card--price span {
+  left: 65px;
+}
+
+.unlimited {
+  background-color: var(--black);
+}
+
+.unlimited .recommended {
+  background-color: var(--grey);
+  color: var(--warm-black);
+}
+
+.unlimited .plan-card--title {
+  color: var(--just-white);
+}
+
+.unlimited .plan-card--price {
+  color: var(--just-white);
+}
+
+.unlimited .plan-card--price span {
+  color: var(--just-white);
+}
+
+.unlimited .plan-card--call-to-action {
+  background-color: var(--warm-black);
+  color: var(--just-white);
+}
+
+.unlimited .plan-card--price span {
+  left: 50px;
+}
