--- a/assets/css/mobile_style.css
+++ b/assets/css/mobile_style.css
@@ -441,8 +441,27 @@ main {
   color: #757575;
 }
 
+.plans-container--slider {
+  display: flex;
+  gap: 5rem;
+  height: 316px;
+  overflow-x: scroll;
+  overscroll-behavior-x: contain;
+  scroll-snap-type: x proximity;
+  padding: 0 5rem;
+}
+
+.plans-container--slider::-webkit-scrollbar {
+  background-color: var(--soft-orange);
+  height: 3px;
+}
+.plans-container--slider::-webkit-scrollbar-thumb {
+  background-color: var(--bitcoin-orange);
+}
+
 .plans-container--card {
   position: relative;
+  scroll-snap-align: center;
   width: 70%;
   min-width: 230px;
   max-width: 300px;
